implemented way to adjust word position on ball; change game world smaller for small laptop;

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <style>
     canvas#game {
       background-color: aquamarine;
-      width: 800px;
-      height: 600px;
     }
 
     .game-container {
@@ -20,8 +18,9 @@
 <body>
 <h1>Type Game</h1>
 <div class="game-container">
-  <canvas id="game" width="800" height="600"></canvas>
+  <canvas id="game"></canvas>
 </div>
+<span id="word"></span>
 <script type="module" src="/src/index.js"></script>
 </body>
 </html>
